Update link and body colors to have a contrast ratio of 7:1 (WCAG AAA compliant), resolves #1233

--- a/app/styles/application.module.css
+++ b/app/styles/application.module.css
@@ -38,13 +38,13 @@
         "Courier New", monospace;
 
     --main-color: light-dark(#383838, #f9f7ec);
-    --main-color-light: light-dark(#858585, #a6a6a6);
+    --main-color-light: light-dark(#585858, #a6a6a6);
     --main-shadow-color: light-dark(var(--green900), hsl(111, 10%, 8%));
     --main-bg: light-dark(#f9f7ec, hsl(0, 1%, 19%));
     --main-bg-dark: light-dark(#edebdd, #141413);
     --gray-border: light-dark(#d5d3cb, #666561);
-    --link-color: rgb(0, 172, 91);
-    --link-hover-color: #007940;
+    --link-color: light-dark(#006133, #04da75);
+    --link-hover-color: light-dark(#01391f, #00f27f);
 
     --placeholder-bg: hsl(212, 7%, 57%);
     --placeholder-bg2: hsl(213, 16%, 75%);
