--- a/app/styles/categories.module.css
+++ b/app/styles/categories.module.css
@@ -15,6 +15,11 @@
 
     > * {
         padding: var(--space-s);
+        display: block;
+    }
+
+    > *:hover {
+        background-color: var(--main-bg);
     }
 
     > * + * {
@@ -32,4 +37,8 @@
 	margin: var(--space-2xs) 0;
 	text-align: center;
 	font-size: 85%;
+
+    > a {
+        text-decoration: underline;
+    }
 }
